Fug fixed: - close icons on dialog is now visible - tabView display only one tab content

--- a/courserating.web/src/main/webapp/resources/css/styles.css
+++ b/courserating.web/src/main/webapp/resources/css/styles.css
@@ -320,9 +320,6 @@ body {
 .authenticate{
 	border: 1px solid black;
 }
-.ui-dialog-titlebar-close{
-	background-color: white;
-}
 
 .comment-tab-feedback{
 	vertical-align:top;
